test/compare/testdata/fixedbugs/issue518.go
// errorcheck

package main

type T // ERROR `syntax error: unexpected newline in type declaration`

func main() { }
